fix: pletera of bugs
