# common/api/model/portofolioContentDTO.ts
@@ -8,10 +8,9 @@ import type { MediaDTO } from './mediaDTO';
 import type { SkillType } from './skillType';
 
 export interface PortofolioContentDTO {
-  /** @nullable */
-  description?: string | null;
-  id?: number;
-  /** @nullable */
-  medias?: MediaDTO[] | null;
-  skillType?: SkillType;
+  /** @minLength 1 */
+  description: string;
+  id: number;
+  medias: MediaDTO[];
+  skillType: SkillType;
 }
